--- a/Ix4ConnectorService/SqlDataExtractor/Settings/View/MsSqlOrdersSettingsView.xaml
+++ b/Ix4ConnectorService/SqlDataExtractor/Settings/View/MsSqlOrdersSettingsView.xaml
@@ -6,35 +6,35 @@
              xmlns:local="clr-namespace:SqlDataExtractor.Settings.View"
              mc:Ignorable="d"  Background="{DynamicResource {x:Static SystemColors.GradientInactiveCaptionBrushKey}}"
              d:DesignHeight="300" d:DesignWidth="300">
-    <StackPanel Orientation="Vertical" >
+    <DockPanel >
         <Label Content="{Binding Source={StaticResource Localization},Path=OrdersSettingsPanel}"  
                            HorizontalAlignment="Stretch" 
                            HorizontalContentAlignment="Center" 
                            VerticalContentAlignment="Center" 
-                           DockPanel.Dock="Top" Margin="0,0,0,5">
-        </Label>
-        <TextBox TextWrapping="Wrap" Text="{Binding OrdersQuery}" MinHeight="50" DockPanel.Dock="Top" Margin="0,0,0,5">
+                           DockPanel.Dock="Top" Margin="0,0,0,5"/>
 
-        </TextBox>
+        <TextBox TextWrapping="Wrap" Text="{Binding OrdersQuery}" MinHeight="50" DockPanel.Dock="Top" Margin="0,0,0,5"/>
+
+
 
         <Label Content="{Binding Source={StaticResource Localization},Path=OrderRecipientSettingsPanel}"
                            HorizontalAlignment="Stretch" 
                            HorizontalContentAlignment="Center" 
                            VerticalContentAlignment="Center" 
-                           DockPanel.Dock="Top" Margin="0,0,0,5">
-        </Label>
-        <TextBox TextWrapping="Wrap" Text="{Binding OrderRecipientQuery}" MinHeight="50" DockPanel.Dock="Top" Margin="0,0,0,5">
+                           DockPanel.Dock="Top" Margin="0,0,0,5"/>
 
-        </TextBox>
+        <TextBox TextWrapping="Wrap" Text="{Binding OrderRecipientQuery}" MinHeight="50" DockPanel.Dock="Top" Margin="0,0,0,5"/>
+
+
 
         <Label Content="{Binding Source={StaticResource Localization},Path=OrderPositionsSettingsPanel}"
                            HorizontalAlignment="Stretch" 
                            HorizontalContentAlignment="Center" 
                            VerticalContentAlignment="Center" 
-                           DockPanel.Dock="Top" Margin="0,0,0,5">
-        </Label>
-        <TextBox TextWrapping="Wrap" Text="{Binding OrderPositionsQuery}" MinHeight="50" DockPanel.Dock="Top" Margin="0,0,0,5">
+                           DockPanel.Dock="Top" Margin="0,0,0,5"/>
 
-        </TextBox>
-    </StackPanel>
+        <TextBox TextWrapping="Wrap" Text="{Binding OrderPositionsQuery}" MinHeight="50" DockPanel.Dock="Top" Margin="0,0,0,5"/>
+
+
+    </DockPanel>
 </UserControl>
