--- a/Ix4ConnectorService/Ix4ServiceConfigurator/View/CustomerInfoView.xaml
+++ b/Ix4ConnectorService/Ix4ServiceConfigurator/View/CustomerInfoView.xaml
@@ -27,8 +27,20 @@
 
     </Window.Resources>
     <StackPanel Margin="0,10,10,5" x:Name="UIMainDockPanel">
-
-        <controls:CustomerInfoControl x:Name="UIUserInfo"  DockPanel.Dock="Top" HorizontalAlignment="Left" HorizontalContentAlignment="Stretch" DataContext="{Binding Customer}"/>
+        
+            <TabControl VerticalAlignment="Top" MinHeight="200">
+            <TabItem Header="{Binding Source={StaticResource Localization},Path=GeneralSettings}">
+                <controls:CustomerInfoControl x:Name="UIUserInfo"  DockPanel.Dock="Top" HorizontalAlignment="Left" HorizontalContentAlignment="Stretch" DataContext="{Binding Customer}"/>
+            </TabItem>
+            <TabItem Header="{Binding Source={StaticResource Localization},Path=MailGatewaySettings}">
+                <controls:MailSettingsControl x:Name="UIMailSet" DockPanel.Dock="Top" HorizontalAlignment="Stretch" HorizontalContentAlignment="Stretch" DataContext="{Binding MailViewModel}"/>
+            </TabItem>
+            <TabItem Header="{Binding Source={StaticResource Localization},Path=ServerStatisticsSettings}">
+                
+            </TabItem>
+            </TabControl>
+        
+        
         
         
         <Button Height="50" Margin="10,0,5,0" IsDefault="True" HorizontalAlignment="Stretch" DockPanel.Dock="Top" Command="{Binding}"
