--- a/Ix4ConnectorService/Ix4ServiceConfigurator/View/MsSql/DBSettingsView.xaml
+++ b/Ix4ConnectorService/Ix4ServiceConfigurator/View/MsSql/DBSettingsView.xaml
@@ -3,7 +3,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:l="clr-namespace:Ix4ServiceConfigurator.View.MsSql"
+             xmlns:l="clr-namespace:Ix4ServiceConfigurator.View"
              mc:Ignorable="d" Background="{DynamicResource {x:Static SystemColors.GradientInactiveCaptionBrushKey}}"
              d:DesignHeight="300" d:DesignWidth="300">
     <ScrollViewer>
